# ansible-homelab

./: .ansible-lint  .gitignore  .mise.toml  .molecule.yml  .moleculeignore  .pre-commit-config.yaml  .releaserc.json  CLAUDE.md  Makefile  README.md  ansible.cfg  pyproject.toml  requirements.yml
.ansible_cache/: s1_proxmox01
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
inventory/: hosts.yml
inventory/group_vars/: proxmox.yml  proxmox_bootstrap.yml  proxmox_vault.yml.example  storage.yml  storage_bootstrap.yml  storage_vault.yml.example
molecule/proxmox/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/proxmox_bootstrap/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/proxmox_iso_builder/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/storage/: converge.yml  molecule.yml  verify.yml
molecule/storage_bootstrap/: converge.yml  molecule.yml  verify.yml
playbooks/: README_ANSIBLE_PULL.md  proxmox.yml  proxmox_bootstrap.yml  proxmox_firstboot.yml  site.yml  storage.yml  storage_bootstrap.yml  ubuntu_lxc.yml
roles/dns/defaults/: main.yml
roles/dns/handlers/: main.yml
roles/dns/tasks/: main.yml
roles/dns/templates/: resolved.conf.j2
roles/mdns/defaults/: main.yml
roles/mdns/handlers/: main.yml
roles/mdns/tasks/: main.yml
roles/mdns/templates/: avahi-daemon.conf.j2  extra.service.j2  proxmox.service.j2  ssh.service.j2
roles/minio/defaults/: main.yml
roles/minio/handlers/: main.yml
roles/minio/tasks/: main.yml
roles/minio/templates/: minio.env.j2
(+11 files in other folders)
