[project]
name = "ansible-homelab"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ansible>=13.0.0",
    "ansible-lint>=25.12.0",
    "hvac>=2.4.0",
    "molecule>=25.12.0",
    "molecule-plugins>=25.0.0",
    "docker>=7.0.0",
    "proxmoxer>=2.2.0",
]
